# tinyjson

./: CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  README.md  SECURITY.md  main.cpp  specifications.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: c-cpp.yml  io.yml
example/: README.md  basic_parse.cpp  fast_dump.cpp  options.cpp  options11.cpp  read_write_json.cpp  read_write_json5.cpp  user_literals.cpp
src/: TinyJSON.cpp  TinyJSON.h
tests/: CMakeLists.txt  main.cpp  testdefaultget.cpp  testduplicatekeys.cpp  testgenericget.cpp  testjson5arrays.cpp  testjson5comments.cpp  testjson5misc.cpp  testjson5newlines.cpp  testjson5numbers.cpp  testjson5objects.cpp  testjson5spec_comments.cpp  testjson5strings.cpp  testjsonchecker.cpp  testparse5.cpp  testshelper.h  testtinyjson.cpp  testtinyjsonarrays.cpp  testtinyjsonbooleans.cpp  testtinyjsonconstructors.cpp  testtinyjsondump.cpp  testtinyjsonexceptions.cpp  testtinyjsonexponents.cpp  testtinyjsonnulls.cpp  testtinyjsonnumber.cpp  testtinyjsonnumbers.cpp  testtinyjsonobjects.cpp  testtinyjsonoptional.cpp  testtinyjsonset.cpp  testtinyjsonstrings.cpp  testtinyjsonvaluesget.cpp  testtinyjsonversion.cpp  testtinyjsonwarnings.cpp  testtinyjsonwrite.cpp
